[Custom Domain] Improve user experience to configure custom domains in PCUI.
In particular, we added the following new optional parameters to the PCUI stack:

  1. CustomDomain
  2. CustomDomainCertificateArn
  3. CognitoCustomDomain
  4. CognitoCustomDomainCertificateArn

and the following new outputs when a custom domain is set:

  1. CustomDomainEndpoint
  2. CognitoCustomDomainEndpoint

--- a/infrastructure/environments/demo-cfn-create-args.yaml
+++ b/infrastructure/environments/demo-cfn-create-args.yaml
@@ -33,7 +33,13 @@ Parameters:
 #  - ParameterKey: IAMRoleAndPolicyPrefix
 #    ParameterValue: xxxxxxxxxx
 #  - ParameterKey: CustomDomain
-#    ParameterValue: xxxxxxxxxx
+#    ParameterValue: pcui.example.com
+#  - ParameterKey: CustomDomainCertificateArn
+#    ParameterValue: arn:<PARTITION>:acm:<REGION>:<ACCOUNT>:certificate/<CERTIFICATE_ID>
+#  - ParameterKey: CognitoCustomDomain
+#    ParameterValue: auth-pcui.example.com
+#  - ParameterKey: CognitoCustomDomainCertificateArn
+#    ParameterValue: arn:<PARTITION>:acm:<REGION>:<ACCOUNT>:certificate/<CERTIFICATE_ID>
 Capabilities:
   - CAPABILITY_AUTO_EXPAND
   - CAPABILITY_NAMED_IAM
