--- a/.github/workflows/production_release.yml
+++ b/.github/workflows/production_release.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   frontend-tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
@@ -40,7 +40,7 @@ jobs:
         working-directory: ./frontend
 
   backend-tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
@@ -59,7 +59,7 @@ jobs:
         run: pytest
 
   release:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     
     needs: [frontend-tests, backend-tests]
 
