--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   frontend-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-core
 
     steps:
       - name: Checkout repo
