--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Run frontend tests
         run: npm test
         working-directory: ./frontend
+        env:
+          NODE_OPTIONS: "--max-old-space-size=4096"
 
   backend-tests:
     runs-on: ubuntu-latest
