--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -36,7 +36,7 @@ Parameters:
     Description: Version of AWS ParallelCluster to deploy.
     Type: String
     AllowedPattern: "^([0-9]+)\\.([0-9]+)\\.([0-9]+)(,([0-9]+)\\.([0-9]+)\\.([0-9]+))*$"
-    ConstraintDescription: Please specify a comma separated list of valid ParallelCluster versions.
+    ConstraintDescription: Please specify a comma separated list of valid ParallelCluster versions. (Must be 3.6.0 and above)
   ImageBuilderVpcId:
     Description: (Optional) Select the VPC to use for building the container images. If not selected, default VPC will be used.
     Type: String
