--- a/.github/workflows/publish-adrs.yml
+++ b/.github/workflows/publish-adrs.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main
+
+permissions:
+  contents: write
+      
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
